[package]
name = "read_cargo_toml"
version = "0.1.0"
authors = ["yuta-natsume <natsume.yuta@classmethod.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin"
path = "src/bin.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = {version = "1", features = ["derive"]}
toml = "0.5"
